--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_display_message">My Message</string>
+    <string name="action_search">Search</string>
+    <string name="ok">Ok</string>
+    <string name="cancel">Cancel</string>
+    <string name="search_dialog">This message appears on the search dialog</string>
 </resources>
